# simple-cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
scripts/: SetupGtest.sh  _template_fns.py  add-bin.py  add-lib.py
src/: CMakeLists.txt  Calc.h  Main.cpp
src/Main/: CMakeLists.txt  Main.cpp
src/calc/: CMakeLists.txt
src/calc/tests/: CMakeLists.txt  CalcTest.cpp
tests/: CMakeLists.txt
